--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div id='aspect-ratio-container' style='width:50%;padding-top:50%;position:relative;'>
         <canvas id='circle' height='1600' width='1600' style='top:0;left:0;width:100%;height:100%;position:absolute;'></canvas>
     </div>
-    <label id='Klabel' for='Kslider'>168.5</label>
+    <label id='Klabel' for='Kslider'>K: 168.5</label>
     <input type='range' id='Kslider' name='K' min='1' max='200' value='168.5' step='.1' style='width:100%;'/>
     <script>
         const canvas = document.getElementById('circle');
@@ -36,7 +36,7 @@
 
             if(event) {
                 K = event.target.value;
-                document.getElementById('Klabel').innerHTML = K;
+                document.getElementById('Klabel').innerHTML = "K: " + K;
             }
             for(let w = 0.0; w <= Z; w++) {
                 let theta = (w * Math.PI * 2) / Z;
