--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 </head>
 <body>
     <div id='aspect-ratio-container' style='width:50%;padding-top:50%;position:relative;'>
-        <canvas id='circle' height='1600' width='1600' style='top:0;left:0;width:100%;height:100%;position:absolute;'></canvas>
+        <canvas id='circle' height='3200' width='3200' style='top:0;left:0;width:100%;height:100%;position:absolute;'></canvas>
     </div>
     <label id='Klabel' for='Kslider'>K: 168.5</label>
-    <input type='range' id='Kslider' name='K' min='1' max='200' value='168.5' step='.1' style='width:100%;'/>
+    <input type='range' id='Kslider' name='K' min='1' max='200' value='168.5' step='.01' style='width:100%;'/>
     <script>
         const canvas = document.getElementById('circle');
         const ctx = canvas.getContext(
@@ -18,16 +18,16 @@
         );
 
         ctx.imageSmoothingEnabled = false;
-        ctx.lineWidth = 1.5;
+        ctx.lineWidth = 2.5;
         ctx.fillStyle = 'rgb(200, 0, 0)';
         ctx.strokeStyle='rgb(80, 80, 120)';
-        ctx.font = '22px serif';
+        ctx.font = '60px serif';
 
-        const H = 1600;
-        const W = 1600;
+        const H = 3200;
+        const W = 3200;
 
         let K = 168.5;
-        const r = 680;
+        const r = 1500;
 
         const Z = 200.0;
 
@@ -35,7 +35,11 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             if(event) {
-                K = event.target.value;
+                let value = event.target.value;
+                if(value > 20) {
+                    value = Math.floor(value * 10) / 10;
+                }
+                K = value;
                 document.getElementById('Klabel').innerHTML = "K: " + K;
             }
             for(let w = 0.0; w <= Z; w++) {
@@ -45,8 +49,8 @@
                 let dY = Math.sin(theta) * r;
                 ctx.fillRect(W / 2 - dX - 4, H / 2 - dY - 4, 8, 8);
 
-                dX = Math.cos(theta) * r * 1.15;
-                dY = Math.sin(theta) * r * 1.15;
+                dX = Math.cos(theta) * (r + 80);
+                dY = Math.sin(theta) * (r + 80);
 
                 ctx.save();
                 ctx.translate(W / 2 - dX, H / 2 - dY);
@@ -59,7 +63,7 @@
                 }
                 ctx.rotate(textRotation);
                 ctx.textAlign = 'center';
-                ctx.fillText(w === 0 ? w + "," : w, w === Z ? 25 : 0, inverted ? 11 : 0);
+                ctx.fillText(w === 0 ? w + "," : w, w === Z ? 25 : 0, inverted ? 30 : 0);
                 ctx.restore();
             }
 
