--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <head>
     <title>Times Tables Residuals Polar Graph</title>
 </head>
-<body>
+<body style='height:100%; width: 100%; padding:0; margin:0; position:relative;'>
     <div id='aspect-ratio-container' style='width:50%;padding-top:50%;position:relative;'>
         <canvas id='circle' height='3200' width='3200' style='top:0;left:0;width:100%;height:100%;position:absolute;'></canvas>
     </div>
-    <label id='Klabel' for='Kslider'>K: 168.5</label>
-    <input type='range' id='Kslider' name='K' min='1' max='200' value='168.5' step='.01' style='width:100%;'/>
+    <div style='width:100%;padding:10px; position:relative;box-sizing:border-box;'>
+        <div>
+            <label id='Klabel' for='Kslider'>K: 168.5</label>
+        </div>
+        <input type='range' id='Kslider' name='K' min='1' max='200' value='168.5' step='.01' style='width:100%;'/>
+        <div>
+            <label id='Zlabel' for='Zslider'>Z: 200</label>
+        </div>
+        <input type='range' id='Zslider' name='Z' min='1' max='200' value='200' step='1' style='width:100%;'/>
+    </div>
     <script>
         const canvas = document.getElementById('circle');
         const ctx = canvas.getContext(
@@ -29,18 +37,26 @@
         let K = 168.5;
         const r = 1500;
 
-        const Z = 200.0;
+        let Z = 200.0;
 
         const rerender = (event) => {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             if(event) {
-                let value = event.target.value;
-                if(value > 20) {
-                    value = Math.floor(value * 10) / 10;
+                if(event.target.name === 'K') {
+                    let value = event.target.value;
+                    if (value > 20) {
+                        value = Math.floor(value * 10) / 10;
+                    }
+                    K = value;
+                    document.getElementById('Klabel').innerHTML = "K: " + K;
+                } else if (event.target.name === 'Z') {
+                    let value = event.target.value;
+                    Z = value;
+                    document.getElementById('Zlabel').innerHTML = "Z: " + Z;
+                } else {
+                    return;
                 }
-                K = value;
-                document.getElementById('Klabel').innerHTML = "K: " + K;
             }
             for(let w = 0.0; w <= Z; w++) {
                 let theta = (w * Math.PI * 2) / Z;
@@ -82,6 +98,7 @@
         };
         rerender();
         document.getElementById('Kslider').addEventListener('input', rerender);
+        document.getElementById('Zslider').addEventListener('input', rerender);
     </script>
 </body>
 </html>
