--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	>
 		<canvas
 			id='circle'
-			height='3200'
-			width='3200'
+			height='6400'
+			width='6400'
 			style='top:0;left:0;width:100%;height:100%;position:absolute;'
 		></canvas>
 	</div>
 	<div id='statusLight' style='height: 2vmin; width:2vmin; position:fixed; top:0; right: 0; background-color:red; display:inline-block'>
 	</div>
 </div>
-<div style='width:100%; height:102px;padding:10px; position:relative;box-sizing:border-box;'>
+<div style='width:100%; height:102px;padding:0 10px; position:relative;box-sizing:border-box;'>
 	<div>
 		<label id='Klabel' for='Kslider'>K: <input type='number' name='Kactual' id='Kactual' value='168.5' min='1' max='200' step='.001'></input></label>
 	</div>
@@ -38,21 +38,20 @@
 	);
 
 	ctx.imageSmoothingEnabled = false;
-	ctx.lineWidth = 2.5;
-	ctx.fillStyle = 'rgb(200, 0, 0)';
+	ctx.lineWidth = 4.5;
     const setColorAngle = (angle) => ctx.strokeStyle = `hsla(${angle}, 100%, 66%, .2)`;
-	ctx.strokeStyle = 'hsla(80, 250, 120, .20)';
-	ctx.font = '60px serif';
+	ctx.strokeStyle = 'hsla(80, 250, 120, .40)';
+	ctx.font = '100 80px Arial';
 	
 	const setStatusRed = () => document.getElementById('statusLight').style.backgroundColor = 'red';
 	const setStatusGreen = () => document.getElementById('statusLight').style.backgroundColor = 'green';
 	
 
-	const H = 3200;
-	const W = 3200;
+	const H = 6400;
+	const W = 6400;
 
 	let K = 168.5;
-	const r = 1400;
+	const r = 2875;
 
 	let Z = 200.0;
 
@@ -79,7 +78,7 @@
 				let value = event.target.value;
 				Z = value;
 				if(event.target.name === 'Z'){
-					document.getElementById('Zlabel').value = Z;
+					document.getElementById('Zactual').value = Z;
 				} else {
 					document.getElementById('Zslider').value = Z;
 				}
@@ -95,10 +94,11 @@
 
 			let dX = Math.cos(theta) * r;
 			let dY = Math.sin(theta) * r;
+			ctx.fillStyle = 'rgb(200, 0, 0)';
 			ctx.fillRect(W / 2 - dX - 8, H / 2 - dY - 8, 16, 16);
 
-			dX = Math.cos(theta) * (r + 100);
-			dY = Math.sin(theta) * (r + 100);
+			dX = Math.cos(theta) * (r + 120);
+			dY = Math.sin(theta) * (r + 120);
 
 			ctx.save();
 			ctx.translate(W / 2 - dX, H / 2 - dY);
@@ -111,7 +111,8 @@
 			}
 			ctx.rotate(textRotation);
 			ctx.textAlign = 'center';
-			ctx.fillText(w === 0 ? w + "," : w, w === 0 ? -70 : 0, inverted ? 30 : 0);
+			ctx.fillStyle = 'rgb(190, 20, 20)';
+			ctx.fillText(w === 0 ? w + "," : w, w === 0 ? -140 : 0, inverted ? 19 : 21);
 			ctx.restore();
 		
 		}
